Image resources management