@@ -1,5 +1,7 @@
 package com.ecommerce.engine._admin.service;
 
+import static com.ecommerce.engine.config.MvcConfig.IMAGE_FOLDER;
+
 import com.ecommerce.engine._admin.dto.response.ImageResponseDto;
 import com.ecommerce.engine.config.EngineProperties;
 import com.ecommerce.engine.entity.Image;
@@ -17,29 +19,36 @@ import java.util.List;
 import java.util.Set;
 import java.util.UUID;
 import lombok.SneakyThrows;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
 
+@Slf4j
 @Service
+// TODO Original and cache images
 public class ImageService implements EntityPresenceService<UUID> {
 
     private final ImageRepository repository;
     private final ForeignKeysChecker foreignKeysChecker;
-    private final String imageDir;
+    private final Path imageDir;
 
     @SneakyThrows
     public ImageService(
             ImageRepository repository, ForeignKeysChecker foreignKeysChecker, EngineProperties engineProperties) {
         this.repository = repository;
-        this.imageDir = engineProperties.getImageDir();
         this.foreignKeysChecker = foreignKeysChecker;
 
         // Create the directory if it doesn't exist
-        Path uploadPath = Paths.get(imageDir);
-        if (!Files.exists(uploadPath)) {
-            Files.createDirectories(uploadPath);
+        String engineImageDir = engineProperties.getImageDir();
+        imageDir = engineImageDir != null
+                ? Paths.get(engineImageDir)
+                : Path.of(Paths.get("").toAbsolutePath().toString(), IMAGE_FOLDER);
+
+        if (!Files.exists(imageDir)) {
+            log.info("Create image directory: {}", imageDir);
+            Files.createDirectories(imageDir);
         }
     }
 
@@ -67,7 +76,7 @@ public class ImageService implements EntityPresenceService<UUID> {
         String uniqueFileName = id + "-" + name + "." + fileExtension;
 
         // Build the path for the image file
-        Path filePath = Paths.get(imageDir).resolve(uniqueFileName);
+        Path filePath = imageDir.resolve(uniqueFileName);
 
         if (oldPath != null) {
             Path oldFilePath = Paths.get(oldPath);
@@ -80,7 +89,7 @@ public class ImageService implements EntityPresenceService<UUID> {
         Files.copy(imageFile.getInputStream(), filePath);
 
         // Store the image reference in the database
-        Image image = new Image(id, imageDir + "/" + uniqueFileName, name);
+        Image image = new Image(id, IMAGE_FOLDER + "/" + uniqueFileName, name);
         Image saved = repository.save(image);
 
         return new ImageResponseDto(saved.getId(), saved.getSrc(), saved.getName());
